--- a/Donut/Donut/Donut.csproj
+++ b/Donut/Donut/Donut.csproj
@@ -48,6 +48,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Donut\GameError.cs" />
+    <Compile Include="Donut\GamePicture.cs" />
+    <Compile Include="Donut\GamePictureResource.cs" />
+    <Compile Include="Donut\GameHelper.cs" />
+    <Compile Include="Donut\ResourceClusterFile.cs" />
     <Compile Include="Donut\GameConfig.cs" />
     <Compile Include="Donut\GameDefine.cs" />
     <Compile Include="Donut\GameGround.cs" />
@@ -56,6 +61,7 @@
     <Compile Include="Donut\I2Size.cs" />
     <Compile Include="Donut\I4Rect.cs" />
     <Compile Include="Donut\IGameMain.cs" />
+    <Compile Include="Donut\ResourceCluster.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
