--- a/Donut/Donut/Donut.csproj
+++ b/Donut/Donut/Donut.csproj
@@ -49,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Donut\GameDerivation.cs" />
+    <Compile Include="Donut\GameEndProc.cs" />
+    <Compile Include="Donut\GameEngine.cs" />
     <Compile Include="Donut\GameError.cs" />
     <Compile Include="Donut\GamePicture.cs" />
     <Compile Include="Donut\GamePictureResource.cs" />
@@ -65,6 +67,8 @@
     <Compile Include="Donut\I4Rect.cs" />
     <Compile Include="Donut\IGameMain.cs" />
     <Compile Include="Donut\ResourceCluster.cs" />
+    <Compile Include="Donut\SubScreen.cs" />
+    <Compile Include="Donut\TaskList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
