--- a/Donut2/Donut2/Donut2/Donut2.csproj
+++ b/Donut2/Donut2/Donut2/Donut2.csproj
@@ -57,6 +57,9 @@
     <Compile Include="Common\GameCurtain.cs" />
     <Compile Include="Common\GameEngine.cs" />
     <Compile Include="Common\GameGround.cs" />
+    <Compile Include="Common\GameKey.cs" />
+    <Compile Include="Common\GameMouse.cs" />
+    <Compile Include="Common\GamePad.cs" />
     <Compile Include="Common\GameSubScreenUtils.cs" />
     <Compile Include="Common\GameInput.cs" />
     <Compile Include="Common\GameJammer.cs" />
