--- a/Donut2/Donut2/Donut2/Donut2.csproj
+++ b/Donut2/Donut2/Donut2/Donut2.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Common\GameCurtain.cs" />
     <Compile Include="Common\GameDraw.cs" />
     <Compile Include="Common\GameEngine.cs" />
+    <Compile Include="Common\GameError.cs" />
     <Compile Include="Common\GameGround.cs" />
     <Compile Include="Common\GameKey.cs" />
     <Compile Include="Common\GameMouse.cs" />
@@ -77,6 +78,7 @@
     <Compile Include="Common\IGameTask.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\Common\GameResourceTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
