--- a/Donut2/Donut2/Donut2/Donut2.csproj
+++ b/Donut2/Donut2/Donut2/Donut2.csproj
@@ -60,11 +60,14 @@
     <Compile Include="Common\GameDraw.cs" />
     <Compile Include="Common\GameEngine.cs" />
     <Compile Include="Common\GameError.cs" />
+    <Compile Include="Common\GameFontUtils.cs" />
     <Compile Include="Common\GameGround.cs" />
     <Compile Include="Common\GameKey.cs" />
     <Compile Include="Common\GameMouse.cs" />
     <Compile Include="Common\GamePad.cs" />
+    <Compile Include="Common\GamePictureUtils.cs" />
     <Compile Include="Common\GameResource.cs" />
+    <Compile Include="Common\GameSystem.cs" />
     <Compile Include="Common\GameUserDatStrings.cs" />
     <Compile Include="Common\GameSubScreenUtils.cs" />
     <Compile Include="Common\GameInput.cs" />
@@ -75,9 +78,10 @@
     <Compile Include="Common\GameSaveData.cs" />
     <Compile Include="Common\GameSE.cs" />
     <Compile Include="Common\GameSubScreen.cs" />
-    <Compile Include="Common\GameSystem.cs" />
+    <Compile Include="Common\GameDxUtils.cs" />
     <Compile Include="Common\GameTaskList.cs" />
     <Compile Include="Common\GameUtils.cs" />
+    <Compile Include="Common\GameWin32.cs" />
     <Compile Include="Common\IGameTask.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
