--- a/Donut2/Donut2/Donut2/Donut2.csproj
+++ b/Donut2/Donut2/Donut2/Donut2.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Common\GameGround.cs" />
     <Compile Include="Common\GameKey.cs" />
     <Compile Include="Common\GameMouse.cs" />
+    <Compile Include="Common\GameMusic.cs" />
     <Compile Include="Common\GamePad.cs" />
     <Compile Include="Common\GamePictureUtils.cs" />
     <Compile Include="Common\GameResource.cs" />
@@ -76,7 +77,7 @@
     <Compile Include="Common\GameInput.cs" />
     <Compile Include="Common\GameJammer.cs" />
     <Compile Include="Common\GameMain.cs" />
-    <Compile Include="Common\GameMusic.cs" />
+    <Compile Include="Common\GameMusicUtils.cs" />
     <Compile Include="Common\GamePrint.cs" />
     <Compile Include="Common\GameSaveData.cs" />
     <Compile Include="Common\GameSE.cs" />
