--- a/Donut2/Donut2/Donut2/Donut2.csproj
+++ b/Donut2/Donut2/Donut2/Donut2.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Common\GameDrawTest.cs" />
+    <Compile Include="Tests\Common\GameFontRegisterTest.cs" />
     <Compile Include="Tests\Common\GamePictureTest.cs" />
     <Compile Include="Tests\Common\GameResourceTest.cs" />
   </ItemGroup>
