--- a/Donut2/doc/Config.conf
+++ b/Donut2/doc/Config.conf
@@ -5,8 +5,7 @@
 ;
 ; =============================================================================
 ; 有効設定項目数
-;
-4
+5
 ; =============================================================================
 ; モニタ選択
 ;
@@ -22,6 +21,7 @@
 ; ログファイル
 ;
 Game.log
+;
 ; =============================================================================
 ; LOG_ENABLED
 ;
@@ -29,4 +29,10 @@ Game.log
 ; 1 ⇒ 有効
 ;
 0
+;
+; =============================================================================
+; ApplicationLogSaveDirectory
+;
+.
+;
 ; =============================================================================
