--- a/Donut2/doc/Config.conf
+++ b/Donut2/doc/Config.conf
@@ -5,7 +5,7 @@
 ;
 ; =============================================================================
 ; 有効設定項目数
-5
+6
 ; =============================================================================
 ; モニタ選択
 ;
@@ -21,6 +21,11 @@
 ; ログファイル
 ;
 Game.log
+;
+; =============================================================================
+; ログ出力件数の上限
+;
+1000
 ;
 ; =============================================================================
 ; LOG_ENABLED
