--- a/Donut2/Donut2/Donut2/Donut2.csproj
+++ b/Donut2/Donut2/Donut2/Donut2.csproj
@@ -111,7 +111,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourcePicture.cs" />
     <Compile Include="ResourceSE.cs" />
-    <Compile Include="Test01\AppGameMain.cs" />
+    <Compile Include="Test01\AGameMain.cs" />
     <Compile Include="Test01\TitleMenu.cs" />
     <Compile Include="Tests\Common\GameDrawTest.cs" />
     <Compile Include="Tests\Common\GameFontRegisterTest.cs" />
