--- a/Donut2/Donut2/Donut2/Donut2.csproj
+++ b/Donut2/Donut2/Donut2/Donut2.csproj
@@ -111,6 +111,7 @@
     <Compile Include="ResourceSE.cs" />
     <Compile Include="Test01\GameMain.cs" />
     <Compile Include="Test01\TitleMenu.cs" />
+    <Compile Include="Test02\InputStringDemo.cs" />
     <Compile Include="Tests\Common\DDDrawTest.cs" />
     <Compile Include="Tests\Common\DDFontRegisterTest.cs" />
     <Compile Include="Tests\Common\DDKeyTest.cs" />
