--- a/Donut2/doc/Config.conf
+++ b/Donut2/doc/Config.conf
@@ -9,10 +9,10 @@
 ; =============================================================================
 ; モニタ選択
 ;
-; -1 ⇒ 自動選択 (デフォルト)
-; 0  ⇒ 最初のモニタ
-; 1  ⇒ 2番目のモニタ
-; 2  ⇒ 3番目のモニタ
+; -1 ＝ 自動選択 (デフォルト)
+; 0  ＝ 最初のモニタ
+; 1  ＝ 2番目のモニタ
+; 2  ＝ 3番目のモニタ
 ; ...
 ;
 -1
@@ -30,14 +30,14 @@ Game.log
 ; =============================================================================
 ; LOG_ENABLED
 ;
-; 0 ⇒ 無効
-; 1 ⇒ 有効
+; 0 ＝ 無効
+; 1 ＝ 有効
 ;
 0
 ;
 ; =============================================================================
 ; ApplicationLogSaveDirectory
 ;
-.
+.\.
 ;
 ; =============================================================================
