--- a/Donut2/doc/Config.conf
+++ b/Donut2/doc/Config.conf
@@ -20,10 +20,14 @@
 ; =============================================================================
 ; ログファイル
 ;
+; 相対パスの場合、実行時のカレントから
+;
 Game.log
 ;
 ; =============================================================================
 ; ログ出力件数の上限
+;
+; 0 ～
 ;
 1000
 ;
