--- a/Donut3/Donut3/Donut3/Donut3.csproj
+++ b/Donut3/Donut3/Donut3/Donut3.csproj
@@ -58,12 +58,12 @@
     <Compile Include="Common\DDSimpleMenu.cs" />
     <Compile Include="Common\DDTable.cs" />
     <Compile Include="Common\MaskGZDataUtils\MaskGZDataEng.cs" />
-    <Compile Include="Common\Options\Crash.cs" />
-    <Compile Include="Common\Options\CrashUtils.cs" />
-    <Compile Include="Common\Options\CrashView.cs" />
-    <Compile Include="Common\Options\CResource.cs" />
-    <Compile Include="Common\Options\SceneKeeper.cs" />
-    <Compile Include="Common\Options\SlideUtils.cs" />
+    <Compile Include="Common\Options\DDCrash.cs" />
+    <Compile Include="Common\Options\DDCrashUtils.cs" />
+    <Compile Include="Common\Options\DDCrashView.cs" />
+    <Compile Include="Common\Options\DDCResource.cs" />
+    <Compile Include="Common\Options\DDSceneKeeper.cs" />
+    <Compile Include="Common\Options\DDSlideUtils.cs" />
     <Compile Include="Ground.cs" />
     <Compile Include="ResourceMusic.cs" />
     <Compile Include="Common\DDCoffeeBreak.cs" />
