--- a/wb/t20200909_Smpl_Mouse_D3/Game0001/Game0001/Game0001/Game0001.csproj
+++ b/wb/t20200909_Smpl_Mouse_D3/Game0001/Game0001/Game0001/Game0001.csproj
@@ -129,6 +129,10 @@
     <Compile Include="Common\Options\DDCResource.cs" />
     <Compile Include="Common\Options\DDSceneKeeper.cs" />
     <Compile Include="Common\Options\DDSlideUtils.cs" />
+    <Compile Include="Games\GameTest0001.cs" />
+    <Compile Include="Games\GameTest0002.cs" />
+    <Compile Include="Games\GameTest0003.cs" />
+    <Compile Include="Games\TitleMenu.cs" />
     <Compile Include="Ground.cs" />
     <Compile Include="MainWin.cs">
       <SubType>Form</SubType>
